--- a/src/style.css
+++ b/src/style.css
@@ -54,38 +54,142 @@ main {
 
 .card {
 	flex-grow: 1;
-	max-width: 560px;
+	max-width: 700px;
 	background: var(--color-neutral);
 	padding: var(--padding-base);
 	border-radius: var(--radius-base);
 	color: var(--color-neutral-900);
 }
 
-.col {
-	display: flex;
-	gap: 1rem;
+form > * + * {
+	margin-top: 1.5rem;
 }
 
-form > .col {
-	margin-bottom: 1rem;
+.col {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1rem;
 }
 
 .col > * {
 	flex-grow: 1;
 	flex-basis: 0;
+	min-width: 250px;
 }
 
-label input {
-	margin-top: 0.5rem;
+fieldset {
+	border: 0;
 }
 
-input,
+.form-control {
+	width: 100%;
+	padding: var(--padding-sm);
+	border-radius: var(--radius-sm);
+	border: 1px solid var(--color-neutral-500);
+	margin-top: 0.75rem;
+	outline: 0;
+}
+
+.form-control:focus-within {
+	outline: 1px solid var(--color-primary-600);
+}
+
+label.form-control {
+	display: flex;
+	align-items: center;
+	gap: 0 1rem;
+	padding-left: 1.5rem;
+	font-size: 1.125rem;
+	cursor: pointer;
+}
+
+label.form-control:has(:checked) {
+	background: var(--color-primary-200);
+	border-color: var(--color-primary-600);
+}
+
+input[name='querytype'] {
+	position: absolute;
+	opacity: 0;
+	cursor: pointer;
+}
+
+.custom-radio {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 18px;
+	aspect-ratio: 1;
+	border: 1px solid var(--color-neutral-500);
+	border-radius: 50%;
+}
+
+input[name='querytype']:checked + .custom-radio {
+	border-color: var(--color-primary-600);
+}
+
+input[name='querytype']:checked + .custom-radio::before {
+	content: '';
+	width: 10px;
+	aspect-ratio: 1;
+	border-radius: 50%;
+	background: var(--color-primary-600);
+}
+
+textarea {
+	resize: vertical;
+}
+
+label[for='consent'] {
+	display: flex;
+	align-items: center;
+	gap: 0 1rem;
+	cursor: pointer;
+}
+
+label[for='consent'] input {
+	position: absolute;
+	cursor: pointer;
+	opacity: 0;
+}
+
+.custom-checkbox {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 18px;
+	aspect-ratio: 1;
+	border: 1px solid var(--color-neutral-500);
+	cursor: pointer;
+}
+
+input[name='consent']:focus + .custom-checkbox {
+	outline: 2px solid var(--color-neutral-500);
+}
+
+input[name='consent']:checked + .custom-checkbox {
+	background: var(--color-primary-600);
+}
+
+input[name='consent']:checked + .custom-checkbox::before {
+	content: '';
+	width: 8px;
+	height: 5px;
+	border-left: 2px solid var(--color-neutral);
+	border-bottom: 2px solid var(--color-neutral);
+	transform: rotate(-45deg);
+}
+
 button {
 	width: 100%;
 	padding: var(--padding-sm);
 	border-radius: var(--radius-sm);
+	background: var(--color-primary-600);
+	border: 0;
+	color: var(--color-neutral);
+	cursor: pointer;
 }
 
-input {
-	border: 1px solid var(--color-neutral-500);
+button:hover {
+	background: var(--color-neutral-900);
 }
