fix: responsive padding for xs screens

--- a/src/style.css
+++ b/src/style.css
@@ -56,7 +56,7 @@ main {
 	flex-grow: 1;
 	max-width: 700px;
 	background: var(--color-neutral);
-	padding: var(--padding-base);
+	padding: min(var(--padding-base), 3%);
 	border-radius: var(--radius-base);
 	color: var(--color-neutral-900);
 }
