--- a/src/style.css
+++ b/src/style.css
@@ -101,21 +101,25 @@ fieldset {
 label.form-control {
 	display: flex;
 	align-items: center;
-	gap: 0 1rem;
+	gap: 1rem;
 	padding-left: 1.5rem;
-	font-size: 1.125rem;
 	cursor: pointer;
 }
 
-label.form-control:has(:checked) {
-	background: var(--color-primary-200);
-	border-color: var(--color-primary-600);
-}
-
-input[name='querytype'] {
+input[type='checkbox'],
+input[type='radio'] {
 	position: absolute;
 	opacity: 0;
 	cursor: pointer;
+}
+
+input[name='querytype']:focus + label {
+	outline: 1px solid var(--color-primary-600);
+}
+
+input[name='querytype']:checked + label {
+	background: var(--color-primary-200);
+	border: 1px solid var(--color-primary-600);
 }
 
 .custom-radio {
@@ -128,11 +132,11 @@ input[name='querytype'] {
 	border-radius: 50%;
 }
 
-input[name='querytype']:checked + .custom-radio {
+input[name='querytype']:checked + label .custom-radio {
 	border-color: var(--color-primary-600);
 }
 
-input[name='querytype']:checked + .custom-radio::before {
+input[name='querytype']:checked + label .custom-radio::before {
 	content: '';
 	width: 10px;
 	aspect-ratio: 1;
@@ -149,12 +153,6 @@ label[for='consent'] {
 	align-items: center;
 	gap: 0 1rem;
 	cursor: pointer;
-}
-
-label[for='consent'] input {
-	position: absolute;
-	cursor: pointer;
-	opacity: 0;
 }
 
 .custom-checkbox {
