--- a/src/style.css
+++ b/src/style.css
@@ -98,6 +98,11 @@ fieldset {
 	outline: 1px solid var(--color-primary-600);
 }
 
+.required::after {
+	content: ' *';
+	color: var(--color-primary-600);
+}
+
 label.form-control {
 	display: flex;
 	align-items: center;
