--- a/src/style.css
+++ b/src/style.css
@@ -99,7 +99,8 @@ fieldset {
 }
 
 .required::after {
-	content: ' *';
+	content: '*';
+	margin-left: 0.5rem;
 	color: var(--color-primary-600);
 }
 
