--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,7 @@
 	--radius-sm: 5px;
 	--padding-base: 2rem;
 	--padding-sm: 0.75rem;
-	--gap-base: 1rem;
+	--gap-base: 1.25rem;
 }
 
 body {
@@ -165,6 +165,7 @@ label[for='consent'] {
 	display: flex;
 	align-items: center;
 	cursor: pointer;
+	margin: 0.5rem 0;
 }
 
 .custom-checkbox {
